# PDaMSoC-data

./: Dockerfile  LICENSE  Nuc_area_Cm_all.xlsx  README.md  X1+Y1_ward.fig  X1Y1_plots.m  X1Y1_plots.mlx  X1_average.fig  X1_complete.fig  analysis.ipynb  correa-analysis.ipynb  efd-analysis.ipynb  efd_dendrograms.m  efd_dendrograms.mlx  main.py  mlab_clusters_X1.csv  plots.asv  plots_X1.asv  plots_X1.mlx  plots_X1Y1.m  plots_X1Y1.mlx  plots_X1Y1_no_X1_15.asv  plots_X1Y1_no_X1_15.mlx  plots_Y1.m  plots_Y1.mlx  pyproject.toml  sensitivity-to-cleaning.ipynb
CompareDistances/: README
PersistentHomologyAnalysis/: README.md  X1Y1_plots.m  X1_focal_points.csv  Y1_focal_points.csv  analysis.ipynb  mlab_clusters_X1.csv  plots_X1.m  plots_X1Y1.m  plots_X1Y1_no_X1_15.m  plots_Y1.m  untitled2.eps
X1/: 202207141015_log.txt  Not_Scaled_X1_df.csv  Nuc_Cm_X1.csv  Nuc_area_Cm_X1.xlsx  Scaled_X1_df.csv  X1_assignments.csv  X1_clean_df.csv  X1_df.csv  X1_no_cleaning_df.csv  distances_not_scaled_by_area.csv  distances_scaled_by_area.csv  wd_diff.csv
X1+Y1/: Not_Scaled_X1+Y1_df.csv  Scaled_X1+Y1_df.csv  X1+Y1_df.csv  X1+Y1_no_X1_15_df.csv  distances.csv  distances_X1.csv  distances_no_x1_15.csv  distances_not_scaled_by_area_Y1.csv  distances_scaled_by_area.csv  distances_scaled_by_area_X1.csv  distances_scaled_by_area_Y1.csv  main_df.csv
X2/: 202206211128_log.txt  Nuc_Cm_X2.csv  Nuc_area_Cm_X2.xlsx  X2_df.csv  X2_no_cleaning_df.csv
X3/: 202206211131_log.txt  Nuc_Cm_X3.csv  Nuc_area_Cm_X3.xlsx  X3_df.csv  X3_no_cleaning_df.csv
Y1/: Not_Scaled_Y1_df.csv  Nuc_Cm_Y1.csv  Y1_df.csv  (+3 more)
(+5335 files in other folders)
