[project]
name = "pdamsoc-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pip>=25.2",
    "plotly>=6.3.0",
    "pyefd>=1.6.0",
    "scikit-learn>=1.7.2",
    "tifffile>=2025.9.20",
]
